Modify yml file triggerer

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ run-name: Cloud_Adventure Frontend
 on:
   push:
     branches:
-      - main
+      - cloud-adventure-version-1
   pull_request:
     branches:
       - main
